# taskah

./: Makefile  pyproject.toml
src/taskah/: cli.py
test/: test_cli.py
