[tool.poetry]
name = "taskah"
version = "0.1.0"
description = "a tiny task manager"
authors = ["odra <me@lrossetti.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "taskah", from = "src" },
]

[tool.poetry.scripts]
taskah = "taskah.cli:main"

[tool.poetry.dependencies]
python = "^3.11"
pyaml = "^23.12.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-sugar = "^0.9.7"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
